WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251496
[GStreamer][WebRTC] WebRTCProvider might be triggered on uninitialized GStreamer runtime
https://bugs.webkit.org/show_bug.cgi?id=251496
Summary
[GStreamer][WebRTC] WebRTCProvider might be triggered on uninitialized GStrea...
Philippe Normand
Reported
2023-02-01 03:37:34 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-02-01 03:40:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9444
EWS
Comment 2
2023-02-01 07:07:55 PST
Committed
259677@main
(abe64b617c46): <
https://commits.webkit.org/259677@main
> Reviewed commits have been landed. Closing PR #9444 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-01 07:08:20 PST
<
rdar://problem/104914852
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug