Cherry-pick 259677@main (abe64b617c46). https://bugs.webkit.org/show_bug.cgi?id=251496

[GStreamer][WebRTC] WebRTCProvider might be triggered on uninitialized GStreamer runtime
    https://bugs.webkit.org/show_bug.cgi?id=251496

    Reviewed by Xabier Rodriguez-Calvar.

    Make sure GStreamer has been initialized before probing the video encoding capabilities.

    * Source/WebCore/platform/mediastream/gstreamer/GStreamerWebRTCProvider.cpp:
    (WebCore::GStreamerWebRTCProvider::initializeVideoEncodingCapabilities):

    Canonical link: https://commits.webkit.org/259677@main